# Reproduce_8K_Tearing

./: CMakeLists.txt  README.md  main.cpp
